--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint-format:fix": "biome check --write"
 	},
 	"dependencies": {
+		"clsx": "^2.1.1",
 		"next": "14.2.15",
 		"react": "^18",
 		"react-dom": "^18"
