--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"clsx": "^2.1.1",
 		"next": "14.2.15",
+		"next-auth": "^4.24.8",
 		"react": "^18",
 		"react-dom": "^18"
 	},
